--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -18,11 +18,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashScreen" />
-        <activity android:name=".FilterResults" />
-        <activity android:name=".DisplayResults" />
-        <activity android:name=".MovieDetails" />
-        <activity android:name=".WatchListDisplay"></activity>
+        <activity
+            android:name=".SplashScreen"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".FilterResults"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".DisplayResults"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".MovieDetails"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".WatchListDisplay"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".MovieRatingsDisplay"></activity>
     </application>
 
 </manifest>
