--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
@@ -35,7 +36,9 @@
         <activity
             android:name=".WatchListDisplay"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".MovieRatingsDisplay"></activity>
+        <activity
+            android:name=".MovieRatingsDisplay"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
