--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,13 @@ dependencies {
 
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.5.0'
+
+    //RxJava2
+    implementation "io.reactivex.rxjava2:rxjava:2.2.4"
+
+    //RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    //retrofit rxjava adapter
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 }
