--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,49 +23,38 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-
     //Retrofit Gson Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-
     //RecyclerView dependency
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
     //Circular ImageView Dependency
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
     //CardView
     implementation 'com.android.support:cardview-v7:28.0.0'
-
     //support libraries
-    implementation "com.android.support:appcompat-v7:28.0.0"
-    implementation "com.android.support:design:28.0.0"
-
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     //Butterknife
     implementation 'com.jakewharton:butterknife:9.0.0-rc2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
-
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.5.0'
-
     //RxJava2
-    implementation "io.reactivex.rxjava2:rxjava:2.2.4"
-
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
     //RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-
     //retrofit rxjava adapter
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
