Added movie recommendations based off current movie

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity
             android:name=".MovieRatingsDisplay"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".BaseActivity"/>
     </application>
 
 </manifest>
