--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
-        >
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,7 +38,11 @@
         <activity
             android:name=".MovieRatingsDisplay"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".BaseActivity"/>
+        <activity android:name=".BaseActivity" />
+        <activity
+            android:name=".ActorInfoActivity"
+            android:parentActivityName=".MainActivity"
+            />
     </application>
 
 </manifest>
