--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,15 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity
-            android:name=".SplashScreen">
+        <activity android:name=".NowPlayingDisplay"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".FilterResults"
             android:parentActivityName=".MainActivity" />
@@ -42,8 +40,7 @@
         <activity android:name=".BaseActivity" />
         <activity
             android:name=".ActorInfoActivity"
-            android:parentActivityName=".MainActivity"
-            />
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
