--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TrendingDisplay"></activity>
+        <activity android:name=".TVDetailsActivity"></activity>
+        <activity android:name=".TrendingDisplay" />
         <activity android:name=".NowPlayingDisplay" />
         <activity android:name=".MainActivity" />
         <activity android:name=".SplashScreen">
